--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -105,9 +105,65 @@
   margin-top: 15px;
   cursor: pointer;
   transition: 0.3s;
+  margin-right: 20em;
 }
 
 .contact-submit:hover {
   transform: scale(1.1);
   transition: 0.3s;
+}
+
+.submit-section {
+  flex-direction: row;
+}
+
+.form-result {
+  font-size: 20px;
+}
+
+@media (max-width: 768px) {
+  .contact {
+    gap: 40px;
+    margin: 50px 6%;
+    align-items: start;
+  }
+  .contact-title h1 {
+    padding: 0;
+    font-size: 50px;
+    font-weight: 600;
+  }
+  .contact-title img {
+    width: 130px;
+    margin-right: -20px;
+  }
+  .contact-section {
+    flex-direction: column;
+  }
+  .contact-left h1 {
+    font-size: 35px;
+  }
+  .contact-detail {
+    gap: 12px;
+  }
+  .contact-detail img {
+    width: 20px;
+  }
+  .contact-left {
+    margin-bottom: 30px;
+  }
+  .contact-right label {
+    font-size: 14px;
+  }
+  .contact-right input {
+    width: 100%;
+    font-size: 20px;
+  }
+  .contact-right textarea {
+    width: 95%;
+    font-size: 20px;
+  }
+  .contact-submit {
+    font-size: 20px;
+    padding: 15px 40px;
+  }
 }
