--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -35,6 +35,7 @@
   transition: 0.3s;
   cursor: pointer;
 }
+
 .mywork-container img:hover {
   transform: scale(1.1);
   border: 4px solid #ff00ff;
@@ -55,10 +56,44 @@
   transition: 0.6s;
   cursor: pointer;
 }
+
 .mywork-showmore img {
   width: 25px;
 }
+
 .mywork-showmore:hover {
   gap: 30px;
   transition: 0.6s;
+}
+
+@media (max-width: 768px) {
+  .mywork {
+    gap: 50px;
+    margin: 50px 6%;
+    align-items: start;
+  }
+
+  .mywork-title h1 {
+    padding: 0;
+    font-size: 50px;
+    font-weight: 600;
+  }
+
+  .mywork-title img {
+    width: 130px;
+    margin-right: -20px;
+  }
+
+  .mywork-container {
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+  .mywork-showmore {
+    padding: 15px 30px;
+    font-size: 16px;
+    margin: 10px auto;
+  }
+  .mywork-showmore:hover {
+    gap: 20px;
+  }
 }
