--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -81,3 +81,38 @@
   transform: scale(1.05);
   transition: 0.4s;
 }
+
+@media (max-width: 768px) {
+  .services {
+    align-items: start;
+    gap: 70px;
+    margin: 20px 6%;
+  }
+  .services-title h1 {
+    padding: 0;
+    font-size: 50px;
+  }
+  .services-title img {
+    width: 130px;
+    margin-right: -20px;
+  }
+  .services-format {
+    gap: 20px;
+    padding: 20px;
+  }
+  .services-format h2 {
+    font-size: 20px;
+  }
+  .services-format p {
+    font-size: 16px;
+    line-height: 26px;
+    max-width: 300px;
+  }
+  .services-readmore img {
+    width: 20px;
+  }
+  .services-container {
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+}
